# docs/swagger.yaml
@@ -1,5 +1,12 @@
 basePath: /api/v1
 definitions:
+  api.createTokenRequest:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    type: object
   api.registerUserRequest:
     properties:
       bio:
@@ -26,6 +33,13 @@ definitions:
       username:
         type: string
     type: object
+  tokens.Token:
+    properties:
+      expiry:
+        type: string
+      token:
+        type: string
+    type: object
   utils.Envelope:
     additionalProperties: true
     type: object
@@ -46,6 +60,44 @@ info:
   title: Fem Project API Documentation
   version: "1.0"
 paths:
+  /tokens:
+    post:
+      consumes:
+      - application/json
+      description: |-
+        Creates a new user in the system after validating the input.
+        The user must provide a unique username, a valid email address, and a secure password.
+        Optionally, a bio can be included for the user's profile.
+      parameters:
+      - description: User Params
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/api.createTokenRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Returns created user information
+          schema:
+            allOf:
+            - $ref: '#/definitions/utils.Envelope'
+            - properties:
+                tokens:
+                  $ref: '#/definitions/tokens.Token'
+              type: object
+        "400":
+          description: Invalid input or bad request
+          schema:
+            $ref: '#/definitions/utils.Envelope'
+        "500":
+          description: Server error while creating the user
+          schema:
+            $ref: '#/definitions/utils.Envelope'
+      summary: Register a new user account
+      tags:
+      - Users
   /users:
     post:
       consumes:
